CSS intermediate module completed

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -26,7 +26,7 @@
       <div class="profile">
         <img src="images/angela.png" alt="angela-img" />
         <h2>Hello.</h2>
-        <p>
+        <p class="intro">
         I am a Computer Science student at the University of Rajshahi. I am a tech enthusiast and I love cricket and programming.  
         </p>
       </div>
@@ -51,8 +51,8 @@
       <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>If you love hot wings as much as I do.<h3>
-        <p>
+        <h3>If you love hot wings as much as I do.</h3>
+        <p class="contact-message">
           Love hot wings as much as I do? Let's talk about how awsome they are! We can code while we eat hot wings.
         </p>
         <a class="btn" href="mailto:forhan.shahriar.fahim@gmail.com">CONTACT ME</a>
@@ -63,7 +63,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/forhan-shahriar-fahim/">LinkedIn</a>
       <a class="footer-link" href="https://www.facebook.com/forhanshahriar.fahim/">Facebook</a>
       <a class="footer-link" href="https://github.com/ForhanShahriarFahim">Github</a>
-      <p>© 2022 Forhan Shahriar Fahim.</p>
+      <p class="copyright">© 2022 Forhan Shahriar Fahim.</p>
     </div>
   </body>
 </html>
